Mobile flickering bug: Take four

--- a/scss/mobileNav.scss
+++ b/scss/mobileNav.scss
@@ -33,9 +33,10 @@
 
         #logoContainer {
             z-index: 15;
-            height: 8vh;
-            padding-top: 2vh;
-            padding-bottom: 2vh;
+            height: 100%;
+            // padding-top: 2vh;
+            // padding-bottom: 2vh;
+            width: fit-content;
             display: flex;
 
             justify-content: flex-start;
@@ -43,18 +44,7 @@
             
             transition: height 0.2s ease;
 
-            #logoCutoff {
-                z-index: 2;
-                top: 0;
-                left: 0;
-                background-color: $main;
-                height: 12vh;
-                aspect-ratio: 1 / 1;
-                
-                transition: height 0.2s ease;
-            }
-
-            #logo {
+            img {
                 z-index: 3;
                 height: 8vh;
                 padding-top: 2vh;
@@ -65,17 +55,27 @@
             }
 
             h1 {
-                position: absolute;
-                left: 12.5vh;
+                position: relative;
                 z-index: 1;
                 margin-left: 10px;
                 font-family: 'Roboto', sans-serif;
                 color: black;
-                font-size: 1.1rem;
+                font-size: 18px;
                 width: max-content;
 
                 transition: font-size 0.2s ease, transform 0.6s ease, left 0.8s ease;
             }
+        }
+
+        #logoCutoff {
+            z-index: 2;
+            top: 0;
+            left: 0;
+            background-color: $main;
+            height: 12vh;
+            aspect-ratio: 1 / 1;
+            
+            transition: height 0.2s ease;
         }
 
         #burgerButton {
@@ -322,9 +322,9 @@ html:not([data-scroll='0']) {
                 }
 
                 h1 {
-                    // font-size: 14px;
-                    // transform: translateX(-8.5rem);
-                    left: max(-20vh, -20vw);
+                    font-size: 14px;
+                    transform: translateX(-125px);
+                    // left: max(-20vh, -20vw);
                 }
             }
         }
